# Hexapod-RS

./: Cargo.toml  README.md
hexapod/: Cargo.toml
hexapod/src/: config.rs  hexapod.rs  input_handler.rs  isometry2.rs  isometry3.rs  leg.rs  lib.rs  telemetry.rs  utils.rs
hexapod/src/modes/: gait.rs  idle.rs  mod.rs  move_body.rs
io_utils/: Cargo.toml
io_utils/src/: controller.rs  lib.rs  telemetry.rs
raspberry/: Cargo.toml
raspberry/src/: main.rs  servo_controller.rs
