[package]
name = "hexapod"
version = "0.1.0"
authors = ["Nils Bernsdorf <nils.bernsdorf@fau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22"
serde = { version = "1.0", features = ["derive"] }
splines = "4.2"