[package]
name = "io_utils"
version = "0.1.0"
authors = ["Nils Bernsdorf <nils.bernsdorf@fau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexapod = {path = "../hexapod" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"